third_party/move/testing-infra/transactional-test-runner/tests/vm_test_harness/round-trip/example.decompiled
//**** Cross-compiled for `move` syntax from `tests/vm_test_harness/example.move`

//# init --addresses A=0x42

//# run
script {
    entry fun main() {
        ()
    }
}


//# view --address 0x1 --resource 0x42::N::R<u64>

//# publish
module 0x42::N {
    use 0x1::signer;
    struct R<T0: store> has key {
        v: T0,
    }
    public entry fun ex(p0: signer, p1: u64) {
        abort 0
    }
    public fun give(p0: &signer) {
        move_to<u64>(R<u64>{v: 0}, p0);
    }
    public fun take(p0: &signer): u64 {
        let _t4;
        R<u64>{v: _t4} = move_from<u64>(signer::address_of(p0));
        _t4
    }
}


//# run --signers 0x1 --args 0 -- 0x42::N::ex

//# run --signers 0x1
script {
    use 0x42::N;
    entry fun main(p0: signer) {
        N::give(&p0);
    }
}


//# view --address 0x1 --resource 0x42::N::R<u64>

//# run --signers 0x1 
script {
    use 0x42::N;
    entry fun main(p0: signer) {
        ()
    }
}


//# view --address 0x1 --resource 0x42::N::R<u64>